--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=job-radar-api
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:jobdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+
+# Logs
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# API URL Configuration
+api.url=https://www.arbeitnow.com/api/job-board-api
